Fix not fitting toolbar

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -64,6 +64,12 @@ body {
   }
 }
 
+.logged-in {
+  .content-column {
+    margin-left: 60px !important;
+  }
+}
+
 h1,
 h2,
 h3 {
